# themagicalsavannahs

./: README.md
backend/: .gitignore  passenger_wsgi.py  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/.project/: index.md  sitemap.md  style-guide.md
frontend/.project/home/: components-plan.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/contact/: page.tsx
frontend/src/app/about/coordinators/: page.tsx
frontend/src/app/about/private-tours/: page.tsx
frontend/src/app/about/referral/: page.tsx
frontend/src/app/about/team/: page.tsx
frontend/src/app/about/why/: page.tsx
frontend/src/app/destinations/: page.tsx
frontend/src/app/destinations/kenya/: page.tsx
frontend/src/app/destinations/tanzania/: page.tsx
frontend/src/app/experiences/hidden-gems/: page.tsx
frontend/src/app/experiences/month/: page.tsx
frontend/src/app/experiences/stargazing/: page.tsx
frontend/src/components/Footer/: FooterBottom.tsx  FooterCTA.tsx  FooterConnect.tsx  FooterDestinations.tsx  FooterLinks.tsx  index.tsx
frontend/src/components/Navbar/: DesktopMenu.tsx  Logo.tsx  MobileMenu.tsx  NavActions.tsx  index.tsx
frontend/src/components/destinations/: DestinationCard.tsx  DestinationGrid.tsx  DestinationsHero.tsx  FilterControls.tsx
frontend/src/config/: footer.ts  navbar.ts
(+36 files in other folders)
